--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/main.css" />
+    <link rel="stylesheet" href="main.css" />
     <title>Lit Demo</title>
   </head>
   <body>
@@ -15,6 +15,6 @@
       <simple-greeting name="Foo"></simple-greeting>
     </main>
     <footer></footer>
-    <script src="src/main.ts"></script>
+    <script src="main.ts"></script>
   </body>
 </html>
